<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/popup_cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/popup_margin_default"
        android:layout_marginStart="@dimen/popup_margin_default"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/popup_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/item_name"
            android:src="@drawable/calvin_klein_white_sweat_03" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        style="@style/item_title_text_style"
        android:layout_marginStart="@dimen/popup_margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/popup_cardView"
        app:layout_constraintStart_toEndOf="@+id/popup_cardView"
        app:layout_constraintTop_toTopOf="@+id/popup_cardView" />

    <ImageView
        android:id="@+id/popup_image_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/ic_back_arrow"
        android:contentDescription="@string/back_arrow"
        android:layout_marginEnd="@dimen/popup_margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/popup_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup_cardView" />

    <TextView
        android:id="@+id/popup_title_description"
        style="@style/item_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/popup_margin_default"
        android:text="@string/item_title_description"
        app:layout_constraintStart_toStartOf="@+id/popup_cardView"
        app:layout_constraintTop_toBottomOf="@+id/popup_cardView" />

    <TextView
        android:id="@+id/popup_item_description"
        style="@style/item_description_text_style"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/item_select_description"
        app:layout_constraintStart_toStartOf="@+id/popup_title_description"
        app:layout_constraintTop_toBottomOf="@+id/popup_title_description" />


    <TextView
        android:id="@+id/popup_title_quantity"
        style="@style/item_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/popup_margin_default"
        android:text="@string/item_title_quantity"
        app:layout_constraintStart_toStartOf="@+id/popup_item_description"
        app:layout_constraintTop_toBottomOf="@+id/popup_item_description" />

    <TextView
        android:id="@+id/popup_item_quantity"
        style="@style/item_description_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_select_quantity"
        app:layout_constraintStart_toStartOf="@+id/popup_title_quantity"
        app:layout_constraintTop_toBottomOf="@+id/popup_title_quantity" />

    <TextView
        android:id="@+id/popup_title_price"
        style="@style/item_title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_title_price"
        android:layout_marginTop="@dimen/popup_margin_default"
        app:layout_constraintStart_toStartOf="@+id/popup_item_quantity"
        app:layout_constraintTop_toBottomOf="@+id/popup_item_quantity" />

    <TextView
        android:id="@+id/popup_item_price"
        style="@style/item_description_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_select_price"
        app:layout_constraintStart_toStartOf="@+id/popup_title_price"
        app:layout_constraintTop_toBottomOf="@+id/popup_title_price" />

    <Button
        android:id="@+id/popup_item_button_add"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/add_to_basket"
        android:layout_margin="50dp"
        android:backgroundTint="@color/marron"
        style="@style/add_to_basket_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_item_price"
         />




</androidx.constraintlayout.widget.ConstraintLayout>